--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,20 @@
     margin: auto;
 }
 
+a {
+    text-decoration: none;
+}
+
 /* header */
-.d-flex-center {
+header {
+    
+}
+/* nav */
+.d-flex-nav {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    
 }
 nav {
     background-color: var(--color-primary-dark);
@@ -36,4 +43,23 @@ nav {
 
 nav ul {
     list-style: none;
+}
+
+/* hero section */
+.d-flex-hero {
+    display: flex;
+    justify-content: space-between;
+    flex-flow: column;
+    align-item: center;
+    align-content: center;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+}
+
+#hero-img {
+    background-image: url(../img/jumbo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 600px;
 }
