--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Noto Sans', sans-serif;
-    border: solid 1px;
+    border: solid 1px black;
 }
 
 /* palette */
@@ -22,13 +22,28 @@
     margin: auto;
 }
 
+.button-white {
+    color: var(--color-neutral-darker);
+    background-color: var(--color-neutral-lightest);
+}
+
+.button-small {
+    padding: 7px 14px;
+    border-radius: 100px;
+}
+
+.button-large{
+    padding: 10px 20px;
+}
+
 a {
     text-decoration: none;
+    color: var(--color-neutral-lightest);
 }
 
 /* header */
 header {
-    
+    color: var(--color-neutral-lightest);
 }
 /* nav */
 .d-flex-nav {
@@ -39,10 +54,16 @@ header {
 }
 nav {
     background-color: var(--color-primary-dark);
+    padding: 20px 0;
 }
 
 nav ul {
     list-style: none;
+}
+
+nav li>a {
+    padding: 5px;
+    margin: 0 15px;
 }
 
 /* hero section */
@@ -62,4 +83,5 @@ nav ul {
     background-repeat: no-repeat;
     background-size: cover;
     height: 600px;
+    padding-top: ;
 }
