--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Noto Sans', sans-serif;
-    border: solid 1px black;
+    /* border: solid 1px black; */
 }
 
 /* palette */
@@ -22,18 +22,30 @@
     margin: auto;
 }
 
-.button-white {
+.button-light {
     color: var(--color-neutral-darker);
     background-color: var(--color-neutral-lightest);
 }
 
+.button-dark {
+    color: var(--color-neutral-lightest);
+    background-color: var(--color-neutral-dark);
+}
+
 .button-small {
-    padding: 7px 14px;
+    padding: 10px 14px;
     border-radius: 100px;
 }
 
 .button-large{
-    padding: 10px 20px;
+    padding: 14px 20px;
+    margin: 10px;
+    border-radius: 100px;
+    font-size: 1.5rem;
+}
+
+.fa-download {
+    margin-right: 10px;
 }
 
 a {
@@ -71,10 +83,9 @@ nav li>a {
     display: flex;
     justify-content: space-between;
     flex-flow: column;
-    align-item: center;
+    align-items: center;
     align-content: center;
     justify-content: center;
-    text-align: center;
     height: 100%;
 }
 
@@ -83,5 +94,17 @@ nav li>a {
     background-repeat: no-repeat;
     background-size: cover;
     height: 600px;
-    padding-top: ;
+    padding-top: 0;
+}
+
+h1 {
+    font-size: 3.5rem;
+    padding: 30px;
+}
+
+.hero-section p {
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 15px;
+    margin-bottom: 15px;
 }
