--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Noto Sans', sans-serif;
-    /* border: solid 1px black; */
+    border : solid 1px black;
 }
 
 /* palette */
@@ -24,6 +24,8 @@
     margin: auto;
 }
 
+
+
 .button-light {
     color: var(--color-neutral-darker);
     background-color: var(--color-neutral-lightest);
@@ -43,7 +45,7 @@
     padding: 14px 24px;
     margin: 10px;
     border-radius: 100px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 .fa-download {
@@ -53,6 +55,12 @@
 a {
     text-decoration: none;
     color: inherit
+}
+
+p {
+    font-size: 1.2rem;
+    line-height: 2rem;
+
 }
 
 .a-hover:hover {
@@ -80,6 +88,7 @@ header {
     justify-content: space-between;
     align-items: center;
 }
+
 nav {
     background-color: var(--color-primary-dark);
     padding: 20px 0;
@@ -103,33 +112,65 @@ nav li>a {
     align-content: center;
     justify-content: center;
     height: 100%;
+    max-width: 810px;
 }
 
 #hero-img {
     background-image: url(../img/jumbo.png);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 600px;
-    padding-top: 0;
+    background-position: center;
+    padding: 150px 0;
 }
 
 h1 {
-    font-size: 3.5rem;
+    font-size: 3rem;
     padding: 30px;
 }
 
 .hero-section p {
-    font-size: 1.5rem;
     text-align: center;
-    padding: 15px;
+    padding: 10px;
     margin-bottom: 20px;
 }
 
 /* main */
 
-.wave-1hkxOo {
+/* .wave {
     color: var(--color-neutral-dark);
+    display: block;
 }
-.wave-1hkxOo.wave-bottom {
+.wave.wave-bottom {
     transform:scaley(-1);
+} */
+
+main>.white-background{
+    background-color: var(--color-neutral-lightest);
+    padding: 100px 0;
+}
+
+main>.gray-background{
+    background-color: var(--color-neutral-light);
+    padding: 100px 0;
+}
+
+.d-flex-main {
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: start;
+}
+
+.image-flex-section {
+    width: 60%;
+}
+
+.image-flex-section>img {
+    width: 100%;
+}
+
+
+.article-flex-section {
+    width: 40%;
+    padding: 40px;
 }
